@@ -1,3 +1,9 @@
+2024-05-29T12:24:12Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/9286015609 # 618
+* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2024-05-29
+* notice: query file size: 26207
+* notice: accum prev / next / diff: re vi: 0 3131 / 0 3132 / +0 +1
+
 2024-05-29T01:00:43Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/9278515488 # 617
 * notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2024-05-29
